--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
           name: Install dependencies
           command: |
             bundle install --jobs=4 --retry=3 --path vendor/bundle
+            gem install rubocop
 
       - save_cache:
           paths:
@@ -46,6 +47,10 @@ jobs:
             ./cc-test-reporter before-build
             bundle exec rake test
             ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
+
+      - run:
+          name: Run style checks
+          command: rubocop
 
       - store_test_results:
           path: /tmp/test-results
