[WIP] Add events functionality (#7)
* Add events controller

* Make rubocop happy

* WIP migration to FactoryBot

* Setup mailer and registration (#9)

* Add mailer

* Add timber logging

* Update registrations

* .

* .

* .

* WIP

* Update sign up stuff

* Make rubocop happy

* Make rubocop happy

* Update dependencies (#10)

* Add events controller

* Make rubocop happy

* WIP migration to FactoryBot

* Make rubocop happy

* Fixes and add approve/unapprove

* Make rubocop happy

* Make rubocop happy

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,10 +8,13 @@ Style/MixinUsage:
   Enabled: false
 
 Metrics/AbcSize:
-  Max: 30
+  Max: 40
 
 Metrics/MethodLength:
   Max: 30
 
 Metrics/BlockLength:
   Max: 50
+
+Metrics/ClassLength:
+  Max: 200
