Add lecturer application model (#16)
* WIP

* WIP

* Add lecturer application model

* Make rubocop happy

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,7 +14,12 @@ Metrics/MethodLength:
   Max: 30
 
 Metrics/BlockLength:
+  Exclude:
+    - db/schema.rb
   Max: 50
 
 Metrics/ClassLength:
   Max: 200
+
+Style/DoubleNegation:
+  Enabled: false
