--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,15 @@ Metrics/ClassLength:
   Exclude:
     - test/**/*.rb
 
+Metrics/CyclomaticComplexity:
+  Max: 7
+
+Metrics/PerceivedComplexity:
+  Max: 10
+
+Style/MultilineTernaryOperator:
+  Enabled: false
+
 Style/DoubleNegation:
   Enabled: false
 
