Add sidekiq configs (#33)
* Add sidekiq configs

* Make rubocop happy

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,8 +1,11 @@
 development:
   rollbar_access_token: <%= ENV['ROLLBAR_ACCESS_TOKEN'] %>
+  redis_url: redis://localhost:6379
 
 test:
   rollbar_access_token: test_rollbar_access_token
+  redis_url: redis://localhost:6379
 
 production:
   rollbar_access_token: <%= ENV['ROLLBAR_ACCESS_TOKEN'] %>
+  redis_url: <%= ENV['REDIS_URL'] %>
